tests/ui/errors/snapshots/infer_interface_not_implemented_ref_argument_resolves.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `Sink` does not implement `Writer`
   ╭─[test.lis:8:15]
 7 │   let mut sink = Sink {}
 8 │   fmt.Fprintf(&sink, "x")
   ·               ──┬──
   ·                 ╰── `Writer` needed here
 9 │ }
   ╰────
  help: One method does not satisfy `Writer`:
        Missing:
          fn Write(self: Sink, p: Slice<byte>) -> Partial<int, error>
  code: [infer.interface_not_implemented]
