tests/ui/errors/snapshots/infer_interface_value_where_concrete_annotation_expected.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
    ╭─[test.lis:10:28]
  9 │   let e: error = FooError {}
 10 │   let concrete: FooError = e
    ·                            ┬
    ·                            ╰── expected `FooError`, found `error`
 11 │   concrete.Error()
    ╰────
  help: An interface value does not carry its concrete type. Narrow it with `assert_type`, e.g. `let value = assert_type<FooError>(value)?` · code: [infer.type_mismatch]
