tests/ui/errors/snapshots/infer_interface_value_where_concrete_field_expected.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
    ╭─[test.lis:14:30]
 13 │   let e: error = FooError {}
 14 │   let held = Holder { inner: e }
    ·                              ┬
    ·                              ╰── expected `FooError`, found `error`
 15 │   held.inner.Error()
    ╰────
  help: An interface value does not carry its concrete type. Narrow it with `assert_type`, e.g. `let value = assert_type<FooError>(value)?` · code: [infer.type_mismatch]
