tests/ui/errors/snapshots/infer_interface_value_where_concrete_param_expected.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
    ╭─[test.lis:12:8]
 11 │   let e: error = FooError {}
 12 │   take(e)
    ·        ┬
    ·        ╰── expected `FooError`, found `error`
 13 │ }
    ╰────
  help: An interface value does not carry its concrete type. Narrow it with `assert_type`, e.g. `let value = assert_type<FooError>(value)?` · code: [infer.type_mismatch]
