tests/ui/errors/snapshots/infer_interface_value_where_concrete_return_expected.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
   ╭─[test.lis:8:24]
 7 │ 
 8 │ fn unwrap(e: error) -> FooError { e }
   ·                        ────┬───   ┬
   ·                            │      ╰── expected `FooError`, found `error`
   ·                            ╰── return type declared here
   ╰────
  help: An interface value does not carry its concrete type. Narrow it with `assert_type`, e.g. `let value = assert_type<FooError>(value)?` · code: [infer.type_mismatch]
