tests/ui/errors/snapshots/infer_invalid_cast_bool_to_int.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid conversion
   ╭─[test.lis:3:3]
 2 │ fn test() -> int {
 3 │   true as int
   ·   ─────┬─────
   ·        ╰── cannot convert `bool` to `int`
 4 │ }
   ╰────
  help: Conversions are supported between numeric types, between string and byte/rune slices, from rune to string, and from concrete types to interfaces · code: [infer.invalid_conversion]
