tests/ui/errors/snapshots/infer_invalid_cast_complex_to_int.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid conversion
   ╭─[test.lis:4:3]
 3 │   let c: complex128 = 1.0 + 2.0i;
 4 │   c as int
   ·   ────┬───
   ·       ╰── cannot convert `complex128` to `int`
 5 │ }
   ╰────
  help: Complex numbers cannot be converted directly. Use `real(c)` or `imaginary(c)` to extract components · code: [infer.invalid_conversion]
