tests/ui/errors/snapshots/infer_invalid_cast_custom_rune_to_byte.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid conversion
   ╭─[test.lis:6:3]
 5 │   let r: MyRune = 'A';
 6 │   r as byte
   ·   ────┬────
   ·       ╰── cannot convert `MyRune` to `byte`
 7 │ }
   ╰────
  help: rune (int32) is wider than byte (uint8) and may not fit. Use an intermediate variable to convert via int first: `let n = r as int; n as byte` · code: [infer.invalid_conversion]
