tests/ui/errors/snapshots/infer_invalid_cast_int_to_complex.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid conversion
   ╭─[test.lis:4:3]
 3 │   let x: int = 42;
 4 │   x as complex128
   ·   ───────┬───────
   ·          ╰── cannot convert `int` to `complex128`
 5 │ }
   ╰────
  help: Complex numbers cannot be converted directly. Use `real(c)` or `imaginary(c)` to extract components · code: [infer.invalid_conversion]
